fix(antd): fix btn is too big in small mode

--- a/packages/antd/src/form-item/style.less
+++ b/packages/antd/src/form-item/style.less
@@ -254,13 +254,6 @@
         }
     }
 
-    .@{ant-prefix}-btn {
-        height: @height-base;
-        padding: 0 7px;
-        font-size: @font-size-base;
-        border-radius: 2px;
-    }
-
     .@{ant-prefix}-cascader-picker {
         height: @height-sm - 2;
 
